--- a/styles/style.css
+++ b/styles/style.css
@@ -38,11 +38,14 @@ body{
   
 }
 .cover {   
-  background-image: url(/images/cover.jpg);  
+  background-image: url(/images/cover.jpg);
+  background-position: center;
   background-size: cover;  
   position: relative;  
   width: 1100px;  
-  height: 757px;  
+  height: 757px;
+  position: relative;
+  z-index: 2;  
 }  
 
 .overlay {  
@@ -50,10 +53,12 @@ body{
   height: 100%;  
   background-color: rgba(0, 0, 0, 0.6);  
   display: flex;  
-  flex-direction: column;  /* Делаем vertical stack */  
-  justify-content: center; /* Выравниваем по центру */  
-  align-items: flex-start; /* Выравниваем влево */  
-  padding-left: 50px; /* Отступ слева */  
+  flex-direction: column;  
+  justify-content: center; 
+  align-items: flex-start;
+  padding-left: 50px;
+  position: relative;
+  z-index: 1; 
 }  
 
 .cover__title {  
@@ -154,102 +159,105 @@ body{
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
 }
-/* .cover{ 
-  background-image: url(/images/cover.jpg);
-  background-size: cover;
-  position:relative;
-  width: 1100px;
-  height: 757px;
-}
-.overlay{
-  width: 100%;
-  height: 100%;
-  background-color: rgb(0 0 0 /.6);
-  display: flex;
-}
-.cover__title{
-  margin-top: 165px;
-  margin-left: 50px;
-  display: flex;
-  width: 1000px;
-  height: 385px;
-}
-.aligned-text{
-  font-size:115px;
-  width: 286px;
-  height: 115px;
-  color: aliceblue;
-  font-family: Raleway;
-  font-size: 100px;
-  font-weight: 700;
-  line-height: 115px;
-  letter-spacing: 0.3em;
-  text-align: left;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
-
-  
-}
-.aligned-text_center{
-  font-size:115px;
-  width: 339px;
-  height: 115px;
-  margin-left: 44.5px;
-  margin-top: 120px;
-  color: aliceblue;
-  font-family: Raleway;
-  font-size: 100px;
-  font-weight: 700;
-  line-height: 115px;
-  letter-spacing: 0.3em;
-  text-align: center;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
-
-}
-.aligned-text_right{
-  display: flex;
-  font-size: 115px;
-  width: 387px;
-  height: 115px;
-  margin-top: 260px;
-  margin-left: -40px;
-  justify-content: end;
-  color: aliceblue;
-  font-family: Raleway;
-  font-size: 100px;
-  font-weight: 700;
-  line-height: 115px;
-  letter-spacing: 0.3em;
-  text-align: right;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
-
-}
-.cover__description{
-  display: flex;
-  color: aliceblue;
-}
-.cover__description-text{
-  font-size: 28px;
-}
-.bet-button{
-  display: flex;
-  background-color: transparent;
-  font-size: 28px;
-  color: aliceblue;
-  border: 0.5px solid aliceblue;
-} */
-
+/* ЛОТЫ С КАРТОЧКАМИ */
 .lots{
   width: 1052px;
   height: 723px;
   margin-top: 180px;
   margin-left: 24px;
   margin-right: 24px;
-  background-color:blueviolet;
-  
-  
+  padding: 0 24px 0 24px;
+}
+.lots__heading{
+  font-family: Raleway;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 46.96px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  margin-left: 40px;
+  margin-bottom: 27px;
+}
+.lots__card-list{
+  display: flex;
+  gap: 25px;
+}
+.card{
+  display: flex;
+  width: 334px;
+  height: 596px;
+}
+.card__title_1{
+  display: flex;
+  margin: 48px 0 0 40px;
+  width: 254px;
+  height: 82px;
+  z-index: 55;
+}
+.card__title_2{
+  display: flex;
+  width: 254px;
+  height: 110px;
+  margin: 48px 0 0 40px;
+}
+.card__title_3{
+  display: flex;
+  width: 254px;
+  height: 110px;
+  margin: 48px 0 0 40px;
+}
+.card__text_1{
+  display: flex;
+  color: #FFFFFF;
+}
+.card__text_2{
+  color: #FFFFFF;
+}
+.card__text_3{
+  color: #FFFFFF;
+}
+.card_type_film{
+  background-position: center;
+  background-size: cover;
+  background-image: url(/images/card-lot-01.jpg);
+}
+.card_type_book{
+  background-position: center;
+  background-size: cover;
+  background-image: url(/images/card-lot-02.jpg);
+}
+.card_type_picture{
+  background-position: center;
+  background-size: cover;
+  background-image: url(/images/card-lot-03.jpg);
+}
+.card-link{
+  font-family: Raleway;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 26.4px;
+  text-align: left;
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #FFFFFF;
+  text-transform: uppercase;
+}
+.lots__look-more-link{
+  display: flex;
+  width: 192px;
+  height: 25px;
+  margin-top: 30px;
+  margin-left: 40px;
+  font-family: Raleway;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23.48px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
 }
 .about{
   width: 1052px;
@@ -258,8 +266,6 @@ body{
   margin-left: 24px;
   margin-left: 24px;
   background-color:hotpink;
-  
-
 }
 .footer{
   width: 1100px;
