--- a/styles/style.css
+++ b/styles/style.css
@@ -1,22 +1,20 @@
 body {
   width: 1100px;
-  height: 3028px;
 }
 
 .header {
   display: grid;
   width: 1100px;
-  height: 293px;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
 }
 
 .header__menu {
+  width: 391.48px;
   display: flex;
   justify-content: center;
-  column-gap: 35px;
-
-  /* сделать круглишки у меню слева! */
+  column-gap: 13px;
+  margin-bottom: 88px;
 }
 
 .header__links-list-item {
@@ -26,18 +24,27 @@ body {
 .header__logo {
   width: 148px;
   height: 105px;
+  margin-bottom: 96px;
 }
 
 .adress {
   display: flex;
   width: 240px;
-  height: 98px;
   max-width: 240px;
   justify-self: end;
+  margin-bottom: 100px;
+  margin-right: 50px;
 }
 
 .content {
   font-size: 14px;
+  width: 240px;
+  height: 98px;
+  font-family: Raleway;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24.3px;
+  letter-spacing: 0%;
 }
 
 .cover {
@@ -46,26 +53,28 @@ body {
   background-size: cover;
   position: relative;
   width: 1100px;
-  height: 757px;
+  min-height: 757px;
   z-index: 2;
+}
+
+.cover_1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .overlay {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  padding-left: 50px;
   position: absolute;
-  z-index: 10;
+  z-index: -1;
+  top: 0;
 }
 
 .cover__title {
   width: 1000px;
-  height: 385px;
   display: flex;
   margin-top: 165px;
   flex-direction: column;
@@ -74,9 +83,8 @@ body {
 .aligned-text {
   display: flex;
   width: 286px;
-  height: 115px;
   margin-left: 50px;
-  color: aliceblue;
+  color: #FFFFFF;
   justify-content: start;
   font-family: Raleway;
   font-size: 100px;
@@ -86,12 +94,12 @@ body {
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
+  font-family:Arial, sans-serif;
 }
 
 .aligned-text_center {
   align-items: center;
   width: 339px;
-  height: 115px;
   margin-left: 360.5px;
   color: aliceblue;
   font-family: Raleway;
@@ -106,7 +114,6 @@ body {
 
 .aligned-text_right {
   width: 387px;
-  height: 115px;
   margin-left: 635px;
   color: aliceblue;
   font-family: Raleway;
@@ -122,15 +129,13 @@ body {
 .cover__description {
   display: flex;
   width: 1000px;
-  height: 51px;
-  color: aliceblue;
+  color: #FFFFFF;
   margin-top: 106px;
   margin-left: 50px;
 }
 
 .cover__description-text {
   width: 638px;
-  height: 28px;
   margin-top: 10px;
   font-family: Raleway;
   font-size: 22px;
@@ -149,8 +154,8 @@ body {
   display: flex;
   justify-content: center;
   background-color: transparent;
-  color: aliceblue;
-  border: 0.5px solid aliceblue;
+  color: #FFFFFF;
+  border: 0.5px solid #FFFFFF;
   padding: 10px 10px;
   font-family: Raleway;
   font-size: 22px;
@@ -165,14 +170,12 @@ body {
 
 .lots {
   width: 1052px;
-  height: 723px;
   margin: 180px 24px 0 24px;
 }
 
 .lots__heading {
   display: flex;
   width: 121px;
-  height: 47px;
   font-family: Raleway;
   font-size: 40px;
   font-weight: 700;
@@ -192,7 +195,6 @@ body {
 
 .lots__card-list-item {
   width: 334px;
-  height: max-content;
   position: relative;
 }
 
@@ -202,48 +204,31 @@ body {
 }
 
 .card {
-  height: 100%;
   display: flex;
   flex-direction: column;
 }
-
-.card_type_film {
-  background-image: url(/images/card-lot-01.jpg);
-  height: 596px;
+.card_type_common{
+  min-height: 596px;
   background-size: cover;
   background-position: center;
+  position: relative;
+  z-index: 2;
+}
+.card_type_film {
+  background-image: url(/images/card-lot-01.jpg);
 }
 
 .card_type_book {
   background-image: url(/images/card-lot-02.jpg);
-  height: 596px;
-  background-size: cover;
-  background-position: center;
 }
 
 .card_type_picture {
   background-image: url(/images/card-lot-03.jpg);
-  height: 596px;
-  background-size: cover;
-  background-position: center;
-}
-
-.overlay_1 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.6);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
 .card__title {
   display: flex;
   width: 254px;
-  height: 110px;
   margin: 48px 0 0 40px;
   text-transform: uppercase;
   position: relative;
@@ -260,12 +245,10 @@ body {
   color: #ffffff;
 }
 
-.card__text_1 {
+.card__text {
   display: flex;
+  margin: auto;
   width: 254px;
-  margin-left: 40px;
-  margin-top: 250px;
-
   position: relative;
   z-index: 20;
   font-family: Raleway;
@@ -277,39 +260,14 @@ body {
   text-decoration-skip-ink: none;
   color: #ffffff;
 }
-
-.card__text_2 {
-  display: flex;
-  width: 254px;
-  margin-left: 40px;
+.location_left{
+  margin-top: 274px;
+}
+.location_center{
   margin-top: 30px;
-  position: relative;
-  z-index: 20;
-  font-family: Raleway;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 24px;
-  text-align: left;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
-  color: #ffffff;
 }
-
-.card__text_3 {
-  display: flex;
-  width: 254px;
-  margin-left: 40px;
+.location_right{
   margin-top: 126px;
-  position: relative;
-  z-index: 20;
-  font-family: Raleway;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 24px;
-  text-align: left;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
-  color: #ffffff;
 }
 
 .lots__look-more-link {
@@ -322,7 +280,6 @@ body {
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
   width: 192px;
-  height: 25px;
   margin-left: 40px;
   margin-top: 30px;
 }
@@ -330,7 +287,6 @@ body {
 /* ОБ АУКЦИОНЕ */
 .about {
   width: 1052px;
-  height: 595px;
   margin-top: 120px;
   margin-left: 24px;
 }
@@ -346,7 +302,6 @@ body {
   align-items: start;
   justify-content: center;
   width: 334px;
-  height: 595px;
 }
 
 .circle {
@@ -370,14 +325,12 @@ body {
 
 .text {
   width: 693px;
-  height: 449px;
   margin-top: 133px;
   margin-left: -48px;
 }
 
 .about__title {
   width: 291px;
-  height: 47px;
   margin-top: 3px;
   font-family: Raleway;
   font-size: 40px;
@@ -389,30 +342,17 @@ body {
   text-transform: uppercase;
 }
 
-.about__text_1 {
+.content_paragraphs {
   margin-top: 100px;
-  width: 688px;
-  height: 120px;
-  font-family: Raleway;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 24px;
-  text-align: left;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
-  margin-bottom: 24px;
 }
 
-.about__text_2 {
-  width: 693px;
-  height: 168px;
+.about__text {
+  margin-top: 24px;
   font-family: Raleway;
-  font-size: 20px;
   font-weight: 400;
+  font-size: 20px;
   line-height: 24px;
-  text-align: left;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
+  letter-spacing: 0%;
 }
 
 /* ФУТЕР ПОШЕЛ */
@@ -421,18 +361,17 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
   justify-content: center;
   width: 1100px;
-  height: 180px;
-  margin-top: 180px;
+  margin: 180px 24px 0 24px;
 }
 
-.adress_1 {
+.address {
   width: 264.57px;
   height: 98px;
   text-align: start;
   margin-left: 50px;
 }
 
-.content_1 {
+.content_footer {
   list-style-type: none;
 }
 
@@ -442,10 +381,11 @@ body {
 }
 
 .footer__menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 163.9px;
-  height: 64px;
-  list-style-type: none;
-  text-align: center;
+  margin: 1px 0 115px 0;
 }
 
 .footer__social-list {
@@ -460,20 +400,21 @@ body {
   gap: 48px;
 }
 
-.footer__social-icon_1 {
-  width: 48px;
+.ttt{
+  width: 240px;
   height: 48px;
-  background-image: url(/images/yt.svg);
   margin-left: -50px;
-  margin-top: 1px;
+  background-repeat: no-repeat;
 }
+
+.footer__social-icon_1 {
+  background-image: url(/images/yt.svg);
+}
+
 .footer__social-icon_2 {
-  width: 48px;
-  height: 48px;
   background-image: url(/images/vk.svg);
 }
+
 .footer__social-icon_3 {
-  width: 48px;
-  height: 48px;
   background-image: url(/images/pinterest.svg);
 }
