--- a/styles/style.css
+++ b/styles/style.css
@@ -40,7 +40,7 @@ body {
   font-size: 14px;
   width: 240px;
   height: 98px;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 24.3px;
@@ -57,7 +57,7 @@ body {
   z-index: 2;
 }
 
-.cover_1 {
+.cover_box {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -86,7 +86,7 @@ body {
   margin-left: 50px;
   color: #ffffff;
   justify-content: start;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 100px;
   font-weight: 700;
   line-height: 115px;
@@ -94,7 +94,6 @@ body {
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
-  font-family: Arial, sans-serif;
 }
 
 .aligned-text_center {
@@ -102,7 +101,7 @@ body {
   width: 339px;
   margin-left: 360.5px;
   color: aliceblue;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 100px;
   font-weight: 700;
   line-height: 115px;
@@ -116,7 +115,7 @@ body {
   width: 387px;
   margin-left: 635px;
   color: aliceblue;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 100px;
   font-weight: 700;
   line-height: 115px;
@@ -137,7 +136,7 @@ body {
 .cover__description-text {
   width: 638px;
   margin-top: 10px;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 22px;
   font-weight: 400;
   line-height: 28px;
@@ -157,7 +156,7 @@ body {
   color: #ffffff;
   border: 0.5px solid #ffffff;
   padding: 10px 10px;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 22px;
   font-weight: 500;
   line-height: 25.83px;
@@ -176,7 +175,7 @@ body {
 .lots__heading {
   display: flex;
   width: 121px;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 40px;
   font-weight: 700;
   line-height: 46.96px;
@@ -233,7 +232,7 @@ body {
   text-transform: uppercase;
   position: relative;
   z-index: 20;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 22px;
   font-weight: 700;
   line-height: 26.4px;
@@ -251,7 +250,7 @@ body {
   width: 254px;
   position: relative;
   z-index: 20;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 20px;
   font-weight: 400;
   line-height: 24px;
@@ -272,7 +271,7 @@ body {
 
 .lots__look-more-link {
   display: flex;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 20px;
   font-weight: 400;
   line-height: 23.48px;
@@ -288,13 +287,11 @@ body {
 .about {
   width: 1052px;
   margin-top: 120px;
-  margin-left: 24px;
 }
 
 .about__column {
   display: grid;
-  grid-template-columns: 334px 1fr;
-  gap: 72px;
+  grid-template-columns: 334px 693px;
 }
 
 .about__logo {
@@ -325,14 +322,13 @@ body {
 
 .text {
   width: 693px;
-  margin-top: 133px;
-  margin-left: -48px;
+  margin: 133px 0 0 48px;
 }
 
 .about__title {
   width: 291px;
   margin-top: 3px;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 40px;
   font-weight: 700;
   line-height: 46.96px;
@@ -348,7 +344,7 @@ body {
 
 .about__text {
   margin-top: 24px;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
@@ -366,13 +362,13 @@ body {
 
 .address {
   width: 264.57px;
-  height: 98px;
   text-align: start;
   margin-left: 50px;
 }
 
 .content_footer {
   list-style-type: none;
+  width: 264.57px;
 }
 
 .footer__menu {
@@ -390,21 +386,23 @@ body {
 
 .footer__social-list {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .footer__social-list-item {
   display: flex;
   width: 240px;
   height: 48px;
-  gap: 48px;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 50px;
 }
 
-.ttt {
-  width: 240px;
+.footer__social-icon {
+  width: 48px;
   height: 48px;
-  margin-left: -50px;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .footer__social-icon_1 {
