--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,6 @@ body {
   display: flex;
   justify-content: center;
   column-gap: 13px;
-  margin-bottom: 88px;
 }
 
 .header__links-list-item {
@@ -25,6 +24,7 @@ body {
   width: 148px;
   height: 105px;
   margin-bottom: 96px;
+  margin-top: 92px;
 }
 
 .adress {
@@ -32,8 +32,8 @@ body {
   width: 240px;
   max-width: 240px;
   justify-self: end;
-  margin-bottom: 100px;
   margin-right: 50px;
+  margin-bottom: 28px;
 }
 
 .content {
