--- a/styles/style.css
+++ b/styles/style.css
@@ -47,7 +47,7 @@ body {
 }
 
 .cover {
-  background-image: url(/images/cover.jpg);
+  background-image: url(../images/cover.jpg);
   background-position: center;
   background-size: cover;
   position: relative;
@@ -213,15 +213,15 @@ body {
   z-index: 2;
 }
 .card_type_film {
-  background-image: url(/images/card-lot-01.jpg);
+  background-image: url(../images/card-lot-01.jpg);
 }
 
 .card_type_book {
-  background-image: url(/images/card-lot-02.jpg);
+  background-image: url(../images/card-lot-02.jpg);
 }
 
 .card_type_picture {
-  background-image: url(/images/card-lot-03.jpg);
+  background-image: url(../images/card-lot-03.jpg);
 }
 
 .card__title {
@@ -309,13 +309,12 @@ body {
   background-color: black;
   margin-top: 35px;
   border-radius: 50%;
-  background-image: url(/images/);
 }
 
 .about__logo-image {
   width: 148px;
   height: 114px;
-  background-image: url(/images/logo-white.svg);
+  background-image: url(../images/logo-white.svg);
   background-repeat: no-repeat;
 }
 
@@ -405,13 +404,13 @@ body {
 }
 
 .footer__social-icon_1 {
-  background-image: url(/images/yt.svg);
+  background-image: url(../images/yt.svg);
 }
 
 .footer__social-icon_2 {
-  background-image: url(/images/vk.svg);
+  background-image: url(../images/vk.svg);
 }
 
 .footer__social-icon_3 {
-  background-image: url(/images/pinterest.svg);
+  background-image: url(../images/pinterest.svg);
 }
