--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 body {
   width: 1100px;
+  outline: 1px solid red;
 }
 
 .header {
@@ -355,7 +356,8 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
   justify-content: center;
   width: 1100px;
-  margin: 180px 24px 0 24px;
+  margin-top: 180px;
+  /* margin: 180px 24px 0 24px; */
 }
 
 .address {
