--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 body {
   width: 1100px;
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
 }
 
 .header {
@@ -14,11 +14,13 @@ body {
   width: 391.48px;
   display: flex;
   justify-content: center;
-  column-gap: 13px;
+  column-gap: 40px;
+  margin-left: 40px;
 }
 
 .header__links-list-item {
   list-style: circle;
+  list-style-type: circle;
 }
 
 .header__logo {
@@ -30,16 +32,13 @@ body {
 
 .adress {
   display: flex;
-  width: 240px;
   max-width: 240px;
   justify-self: end;
   margin-right: 50px;
-  margin-bottom: 28px;
 }
 
 .content {
   width: 240px;
-  height: 98px;
   font-family: Raleway, sans-serif;
   font-weight: 400;
   font-size: 18px;
@@ -65,6 +64,7 @@ body {
 }
 
 .overlay {
+  display: flex;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
@@ -99,8 +99,9 @@ body {
 .aligned-text_center {
   align-items: center;
   width: 339px;
-  margin-left: 360.5px;
-  color: aliceblue;
+  margin-left: 380px;
+  margin-top: 20px;
+  color: #ffffff;
   font-family: Raleway, sans-serif;
   font-size: 100px;
   font-weight: 700;
@@ -113,8 +114,9 @@ body {
 
 .aligned-text_right {
   width: 387px;
-  margin-left: 635px;
-  color: aliceblue;
+  margin-left: 663px;
+  margin-top: 20px;
+  color: ffffff;
   font-family: Raleway, sans-serif;
   font-size: 100px;
   font-weight: 700;
@@ -127,6 +129,7 @@ body {
 
 .cover__description {
   display: flex;
+  flex-direction: row;
   width: 1000px;
   color: #ffffff;
   margin-top: 106px;
@@ -134,8 +137,8 @@ body {
 }
 
 .cover__description-text {
-  width: 638px;
-  margin-top: 10px;
+  width: 637px;
+  margin-top: 9px;
   font-family: Raleway, sans-serif;
   font-size: 22px;
   font-weight: 400;
@@ -143,13 +146,14 @@ body {
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
-  word-spacing: 10px;
+  word-spacing: 18px;
 }
 
 .bet-button {
   width: 256px;
   height: 51px;
-  margin-left: 80px;
+  margin-left: 105px;
+  margin-top: 2px;
   display: flex;
   justify-content: center;
   background-color: transparent;
@@ -183,10 +187,11 @@ body {
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
   margin-left: 40px;
-  margin-bottom: 27px;
+  margin-bottom: 30px;
 }
 
 .lots__card-list {
+  flex-wrap: wrap;
   display: flex;
   justify-content: space-between;
   list-style: none;
@@ -207,6 +212,10 @@ body {
   flex-direction: column;
 }
 .card_type_common {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   min-height: 596px;
   background-size: cover;
   background-position: center;
@@ -245,8 +254,7 @@ body {
 }
 
 .card__text {
-  display: flex;
-  margin: auto;
+  margin-bottom: 48px;
   width: 254px;
   position: relative;
   z-index: 20;
@@ -258,15 +266,6 @@ body {
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
   color: #ffffff;
-}
-.location_left {
-  margin-top: 274px;
-}
-.location_center {
-  margin-top: 30px;
-}
-.location_right {
-  margin-top: 126px;
 }
 
 .lots__look-more-link {
@@ -299,6 +298,7 @@ body {
   align-items: start;
   justify-content: center;
   width: 334px;
+  margin-left: 9px;
 }
 
 .circle {
@@ -309,12 +309,14 @@ body {
   height: 240px;
   background-color: black;
   margin-top: 35px;
+  margin-left: 30px;
   border-radius: 50%;
 }
 
 .about__logo-image {
   width: 148px;
   height: 114px;
+  margin-bottom: 5px;
   background-image: url(../images/logo-white.svg);
   background-repeat: no-repeat;
 }
@@ -363,12 +365,19 @@ body {
 .address {
   width: 264.57px;
   text-align: start;
-  margin-left: 50px;
 }
 
 .content_footer {
-  list-style-type: none;
   width: 264.57px;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  font-family: Raleway;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24.3px;
+  letter-spacing: 0%;
+  margin-left: 50px;
 }
 
 .footer__menu {
@@ -381,7 +390,14 @@ body {
   flex-direction: column;
   align-items: center;
   width: 163.9px;
-  margin: 1px 0 115px 0;
+  margin-bottom: 2px;
+  justify-content: start;
+  font-family: Raleway;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.13px;
+  letter-spacing: 0%;
+  text-align: center;
 }
 
 .footer__social-list {
