--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@ body {
   width: 1100px;
   outline: 1px solid red;
 }
-
+/* проверил все, скроллов при ширине 1100рх - нет, каждый элемент просмотрел, ни один не выходит за границы тела */
 .header {
   display: grid;
   width: 1100px;
