--- a/styles/style.css
+++ b/styles/style.css
@@ -420,11 +420,16 @@ body {
 }
 
 .footer__social-list {
-  display: flex;
-  justify-content: flex-end;
-  margin-bottom: 131px;
+  width: 240px;
+  margin-bottom: 128px;
+  margin-left: 76px;
 }
-
+.list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
 .footer__social-list-item {
   display: flex;
   width: 240px;
