--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,7 @@ body {
   line-height: 21.13px;
   letter-spacing: 0%;
 }
+
 .no_marker {
   list-style-type: none;
 }
@@ -373,7 +374,6 @@ body {
   /* margin: 180px 24px 0 24px; */
 }
 
-
 .content_footer {
   width: 264.57px;
   list-style-type: none;
@@ -392,6 +392,7 @@ body {
   justify-content: center;
   margin-bottom: 115px;
 }
+
 .link {
   text-decoration: none;
 }
@@ -414,12 +415,16 @@ body {
 .footer__social-list {
   width: 240px;
   margin-bottom: 128px;
+  margin-left: 130px;
   /* margin-left: 70px; */
 }
+
 .list {
   display: flex;
+  justify-content: end;
   list-style-type: none;
 }
+
 .footer__social-list-item {
   display: flex;
   width: 240px;
@@ -431,7 +436,6 @@ body {
 
 .footer__social-icon {
   width: 48px;
-  height: 48px;
   background-repeat: no-repeat;
   background-size: cover;
 }
