--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ body {
   margin-bottom: 2px;
   margin-left: 50px;
   /* стили */
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 21.13px;
@@ -48,7 +48,7 @@ body {
 
 .content {
   width: 240px;
-  font-family: Raleway, sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 400;
   font-size: 18px;
   margin-left: 186px;
@@ -96,7 +96,7 @@ body {
   margin-left: 50px;
   color: #ffffff;
   justify-content: start;
-  font-family: Raleway, sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 100px;
   font-weight: 700;
   line-height: 115px;
@@ -112,7 +112,7 @@ body {
   margin-left: 380px;
   margin-top: 20px;
   color: #ffffff;
-  font-family: Raleway, sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 100px;
   font-weight: 700;
   line-height: 115px;
@@ -127,7 +127,7 @@ body {
   margin-left: 663px;
   margin-top: 20px;
   color: #ffffff;
-  font-family: Raleway, sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 100px;
   font-weight: 700;
   line-height: 115px;
@@ -149,7 +149,7 @@ body {
 .cover__description-text {
   width: 637px;
   margin-top: 9px;
-  font-family: Raleway, sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 22px;
   font-weight: 400;
   line-height: 28px;
@@ -170,7 +170,7 @@ body {
   color: #ffffff;
   border: 0.5px solid #ffffff;
   padding: 10px 10px;
-  font-family: Raleway, sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 22px;
   font-weight: 500;
   line-height: 25.83px;
@@ -189,7 +189,7 @@ body {
 .lots__heading {
   display: flex;
   width: 121px;
-  font-family: Raleway, sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 40px;
   font-weight: 700;
   line-height: 46.96px;
@@ -253,7 +253,7 @@ body {
   text-transform: uppercase;
   position: relative;
   z-index: 20;
-  font-family: Raleway, sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 22px;
   font-weight: 700;
   line-height: 26.4px;
@@ -270,7 +270,7 @@ body {
   width: 254px;
   position: relative;
   z-index: 20;
-  font-family: Raleway, sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 20px;
   font-weight: 400;
   line-height: 24px;
@@ -282,7 +282,7 @@ body {
 
 .lots__look-more-link {
   display: flex;
-  font-family: Raleway, sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 20px;
   font-weight: 400;
   line-height: 23.48px;
@@ -341,7 +341,7 @@ body {
 .about__title {
   width: 291px;
   margin-top: 3px;
-  font-family: Raleway, sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 40px;
   font-weight: 700;
   line-height: 46.96px;
@@ -357,7 +357,7 @@ body {
 
 .about__text {
   margin-top: 24px;
-  font-family: Raleway, sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
@@ -379,7 +379,7 @@ body {
   list-style-type: none;
   display: flex;
   flex-direction: column;
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 24.3px;
@@ -404,7 +404,7 @@ body {
   width: 163.9px;
   margin-bottom: 2px;
   justify-content: start;
-  font-family: Raleway;
+  font-family: "Raleway", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 21.13px;
